force-app/main/default/objects/Tax_Receipt__c/Tax_Receipt__c.object-meta.xml
<CustomObject>
    <description>Tax Receipts.</description>
    <label>Tax Receipt</label>
    <nameField>
        <label>Tax Receipt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>