force-app/main/default/objects/Tax_Receipt__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>The total amount received by the organization</inlineHelpText>
    <label>Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>