force-app/main/default/objects/Tax_Receipt__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>The Address City for who this Tax Receipt is issued to</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>