force-app/main/default/objects/Tax_Receipt__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>The address Country for who this Receipt is Issued to</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>