force-app/main/default/objects/Tax_Receipt__c/fields/Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued__c</fullName>
    <inlineHelpText>The date this Reciept was issued</inlineHelpText>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>