force-app/main/default/objects/Tax_Receipt__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <inlineHelpText>When was this donation received into the bank account. This field will display on the printed tax receipt</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>