force-app/main/default/objects/Tax_Receipt__c/fields/Deleted_Recalled__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Recalled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has this Receipt been Deleted or Recalled</inlineHelpText>
    <label>Deleted/Recalled</label>
    <type>Checkbox</type>
</CustomField>