force-app/main/default/objects/Tax_Receipt__c/fields/Duplicate_Reprint__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Reprint__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this Receipt a duplicate copy or a reprint</inlineHelpText>
    <label>Duplicate/Reprint</label>
    <type>Checkbox</type>
</CustomField>