force-app/main/default/objects/Tax_Receipt__c/fields/Eligible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Amount__c</fullName>
    <inlineHelpText>The amount of the donation that is eligible for charitable tax receipt</inlineHelpText>
    <label>Eligible Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>