force-app/main/default/objects/Tax_Receipt__c/fields/Number_of_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Gifts__c</fullName>
    <inlineHelpText>If this is a year end consolidated receipt, this is the number of gifts that are included in this consolidated receipt</inlineHelpText>
    <label>Number of Gifts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>