force-app/main/default/objects/Tax_Receipt__c/fields/Personal_Benefit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Personal_Benefit_Amount__c</fullName>
    <inlineHelpText>The amount received by the organization that had a personal benefit or advantage. This portion is ineligible for a tax receipt.</inlineHelpText>
    <label>Personal Benefit Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>