force-app/main/default/objects/Tax_Receipt__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <inlineHelpText>The address Postal Code for who this Tax Receipt is issued to</inlineHelpText>
    <label>Postal Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>