force-app/main/default/objects/Tax_Receipt__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <inlineHelpText>The address province for who this Tax Receipt is issued to</inlineHelpText>
    <label>Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>