force-app/main/default/objects/Tax_Receipt__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <inlineHelpText>This is automatically set by the system. This is a Unique number for this Receipt.</inlineHelpText>
    <label>Receipt Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>