force-app/main/default/objects/Tax_Receipt__c/fields/Receipt_Rationale_Gift_Description__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Rationale_Gift_Description__c</fullName>
    <inlineHelpText>This is a short description of the gift that will appear on the Receipt. This is useful for describing In-Kind Gift appraisals or sales of Stock</inlineHelpText>
    <label>Receipt Rationale/Gift Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>