force-app/main/default/objects/Tax_Receipt__c/fields/Reprint_Date__c.field-meta.xml
<CustomField>
    <fullName>Reprint_Date__c</fullName>
    <inlineHelpText>If this Receipt is a Reprint, this is the date of the most recent reprint</inlineHelpText>
    <label>Reprint Date</label>
    <type>Date</type>
</CustomField>