force-app/main/default/objects/Tax_Receipt__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <inlineHelpText>The Street Address for who this Tax Receipt is issued</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>