force-app/main/default/objects/Tax_Receipt__c/fields/Tax_Year_Received__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year_Received__c</fullName>
    <inlineHelpText>If this is a year end consolidated receipt this is the year the gifts were received in</inlineHelpText>
    <label>Tax Year Received</label>
    <length>4</length>
    <type>Text</type>
</CustomField>