force-app/main/default/objects/Tax_Receipt__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <inlineHelpText>Who is this Tax Receipt for</inlineHelpText>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>