force-app/main/default/objects/Tax_Receipt__c/recordTypes/Business_Receipt.recordType-meta.xml
<RecordType>
    <fullName>Business_Receipt</fullName>
    <active>true</active>
    <description>Non-Charitable receipt</description>
    <label>Business Receipt</label>
</RecordType>