force-app/main/default/objects/Tax_Receipt__c/recordTypes/Tax_Receipt.recordType-meta.xml
<RecordType>
    <fullName>Tax_Receipt</fullName>
    <active>true</active>
    <description>Charitable Canadian Tax Receipt</description>
    <label>Tax Receipt</label>
</RecordType>